- Added navigation component for news list and detail - Added adapter for news list - Created Result object for data and error handling case

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,11 @@ apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 android {
     compileSdkVersion 28
+
+    dataBinding {
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.cnx.newsfeed"
         minSdkVersion 21
