- Updated app gradle file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "com.cnx.newsfeed.util.AppTestRunner"
+
+        /** Replace with your api_token
+         * eg: Your api token is 58d482512a2e430fa414efe8c8747fc2
+         * Following line should be replaced by
+         * buildConfigField 'String', 'API_DEVELOPER_TOKEN', "\"58d482512a2e430fa414efe8c8747fc2\""*/
+
+        buildConfigField 'String', 'API_DEVELOPER_TOKEN', "\"${api_developer_token}\""
     }
     buildTypes {
 
