--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,13 @@
-apply plugin: 'com.android.application'
-apply plugin: 'jacoco'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlin-allopen'
-apply plugin: 'androidx.navigation.safeargs.kotlin'
+plugins {
+    id ("com.android.application")
+    id("jacoco")
+    id("kotlin-android")
+    id("kotlin-kapt")
+    id("kotlin-allopen")
+    id("androidx.navigation.safeargs.kotlin")
+    id("com.google.dagger.hilt.android")
+
+}
 
 allOpen {
     // allows mocking for classes w/o directly opening them for release builds
@@ -12,16 +15,21 @@ allOpen {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+
+        dataBinding true
+        viewBinding = true
+
+        // for view binding:
+        // viewBinding true
     }
 
     defaultConfig {
         applicationId "com.kanchanpal.newsfeed"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "com.kanchanpal.newsfeed.util.AppTestRunner"
@@ -31,7 +39,7 @@ android {
          * Following line should be replaced by following, including Backslash
          * buildConfigField 'String', 'API_DEVELOPER_TOKEN', "\"58d482512a2e430fa414efe8c8747fc2\""*/
 
-        buildConfigField 'String', 'API_DEVELOPER_TOKEN', "\"${api_developer_token}\""
+        buildConfigField 'String', 'API_DEVELOPER_TOKEN', "\"ea8c49d0ae7147888d9bc2562557554c\""
     }
     buildTypes {
 
@@ -42,6 +50,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
     }
 }
 
@@ -56,7 +68,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
 
-
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
 
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
@@ -65,7 +78,6 @@ dependencies {
     debugImplementation "androidx.fragment:fragment-testing:$rootProject.fragmentVersion"
     implementation "androidx.core:core-ktx:$rootProject.ktxVersion"
     implementation "androidx.fragment:fragment-ktx:$rootProject.fragmentVersion"
-    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
@@ -77,7 +89,6 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$rootProject.workVersion"
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     implementation "com.google.android.material:material:$rootProject.materialVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlinVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
 
@@ -86,19 +97,16 @@ dependencies {
     implementation "com.facebook.stetho:stetho:$rootProject.stetho"
     implementation "com.facebook.stetho:stetho-okhttp3:$rootProject.stetho"
 
-    // Dagger
-    kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
-    kapt "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
-    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
-    implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
-    implementation "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
-
     // Networking
     implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
     implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofit"
     implementation "com.squareup.okhttp3:okhttp:$rootProject.okhttp"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp"
+
+    implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
+    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
     // Testing-only dependencies
     testImplementation "junit:junit:$rootProject.junitVersion"
@@ -129,6 +137,9 @@ dependencies {
 
     }
 }
+kapt {
+    correctErrorTypes = true
+}
 
 task fullCoverageReport(type: JacocoReport) {
     dependsOn 'createDebugCoverageReport'
@@ -149,9 +160,9 @@ task fullCoverageReport(type: JacocoReport) {
     def debugTree = fileTree(dir: "${buildDir}/intermediates/classes/debug", excludes: fileFilter)
     def mainSrc = "${project.projectDir}/src/main/java"
 
-    sourceDirectories = files([mainSrc])
-    classDirectories = files([debugTree])
-    executionData = fileTree(dir: "$buildDir", includes: [
+    sourceDirectories.from = files([mainSrc])
+    classDirectories.from = files([debugTree])
+    executionData.from = fileTree(dir: "$buildDir", includes: [
             "jacoco/testDebugUnitTest.exec",
             "outputs/code-coverage/connected/*coverage.ec"
     ])
