--- a/build.gradle
+++ b/build.gradle
@@ -3,25 +3,25 @@
 buildscript {
     ext {
         // Sdk and tools
-        compileSdkVersion = 30
+        compileSdkVersion = 33
         minSdkVersion = 21
-        targetSdkVersion = 30
+        targetSdkVersion = 33
 
         // App dependencies
-        appCompatVersion = '1.1.0-beta01'
-        constraintLayoutVersion = '2.0.0-beta1'
-        coroutinesVersion = "1.3.0-RC"
-        fragmentVersion = '1.1.0-alpha09'
+        appCompatVersion = '1.6.1'
+        constraintLayoutVersion = '2.1.4'
+        coroutinesVersion = "1.7.1"
+        fragmentVersion = '1.5.7'
         glideVersion = '4.9.0'
-        gradleVersion = '3.4.1'
-        kotlinVersion = '1.3.41'
+        gradleVersion = '4.2.2'
+        kotlinVersion = '1.8.0'
         ktlintVersion = '0.30.0'
-        ktxVersion = '1.0.2'
-        lifecycleVersion = '2.2.0-alpha02'
+        ktxVersion = '1.10.1'
+        lifecycleVersion = '2.6.1'
         materialVersion = '1.0.0'
-        navigationVersion = '2.0.0'
+        navigationVersion = '2.4.0'
         recyclerViewVersion = '1.1.0-alpha05'
-        roomVersion = '2.2.0-alpha01'
+        roomVersion = '2.5.2'
         workVersion = '2.1.0'
         pagingVersion = '2.1.0'
         gsonVersion = '2.8.2'
@@ -47,12 +47,13 @@ buildscript {
         testCoreVersion = "1.1.0"
         testRunnerVersion = "1.1.1"
         testRulesVersion = "1.1.1"
+        hiltVersion = "2.38.1"
 
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
 
     }
     dependencies {
@@ -61,16 +62,21 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
     }
 }
 
+plugins {
+    id("com.google.dagger.hilt.android") version "2.44" apply false
+}
+
     allprojects {
         repositories {
             google()
-            jcenter()
+            mavenCentral()
 
         }
     }
