--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
+import org.jetbrains.kotlin.gradle.tasks.KaptGenerateStubs
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     ext {
         // Sdk and tools
-        compileSdkVersion = 33
+        compileSdkVersion = 34
         minSdkVersion = 21
         targetSdkVersion = 33
 
@@ -13,15 +16,15 @@ buildscript {
         coroutinesVersion = "1.7.1"
         fragmentVersion = '1.5.7'
         glideVersion = '4.9.0'
-        gradleVersion = '4.2.2'
+        gradleVersion = '8.1.0'
         kotlinVersion = '1.8.0'
         ktlintVersion = '0.30.0'
         ktxVersion = '1.10.1'
         lifecycleVersion = '2.6.1'
         materialVersion = '1.0.0'
-        navigationVersion = '2.4.0'
+        navigationVersion = '2.7.1'
         recyclerViewVersion = '1.1.0-alpha05'
-        roomVersion = '2.5.2'
+        roomVersion = '2.2.5'
         workVersion = '2.1.0'
         pagingVersion = '2.1.0'
         gsonVersion = '2.8.2'
@@ -70,18 +73,34 @@ buildscript {
 }
 
 plugins {
-    id("com.google.dagger.hilt.android") version "2.44" apply false
+    id("com.google.dagger.hilt.android") version "2.47" apply false
 }
 
-    allprojects {
-        repositories {
-            google()
-            mavenCentral()
+allprojects {
 
+    tasks.withType(KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "17"
+        }
+    }
+    tasks.withType(KaptGenerateStubs).configureEach {
+        kotlinOptions.jvmTarget = "17"
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'org.xerial:sqlite-jdbc:3.34.0'
         }
     }
 
-    task clean(type: Delete) {
-        delete rootProject.buildDir
-    }
+    repositories {
+        google()
+        mavenCentral()
 
+    }
+}
+
+
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDir
+}
